--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <link href="assets/css/style.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://kit.fontawesome.com/33d90779a0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -40,19 +41,12 @@
         <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
         <li class="dropdown"><a href="#"><span>Languages</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="#">Drop Down 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-              <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Drop Down 2</a></li>
-            <li><a href="#">Drop Down 3</a></li>
-            <li><a href="#">Drop Down 4</a></li>
+            <span><i class="fab fa-html5 fa-2xl"></i></span>
+            <span><i class="fab fa-css3-alt fa-2x1"></i></span>
+            <span><i class="fab fa-js fa-2xl"></i></span>
+            <span><i class="fab fa-node-js fa-2xl"></i></span>
+            <span><i class="fab fa-react fa-2x1"></i></span>
+            <i class="material-icons">join_full</i>
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
