--- a/index.html
+++ b/index.html
@@ -72,29 +72,30 @@
       <div class="container">
 
         <div class="section-title">
-          <span>About Me</span>
+          
           <h2>About Me</h2>
-          <p>I am a learning web developer and recent University of Washington Fullstack Bootcamp graduate.</p>
+          <p>I am an aspiring web developer and recent University of Washington Fullstack Bootcamp graduate.</p>
         </div>
 
-        <div class="row">
-          <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
+        <div>
+          <img src="../Gabe-Sowa-Port/assets/img/weddingP.jpg" class="col-lg-3 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-lg-8 d-flex flex-column align-items-stretch">
             <div class="content ps-lg-4 d-flex flex-column justify-content-center">
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(971) 895 0019</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>Request via email</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Seattle, WA, USA</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Certifications:</strong> <span>Fullstack Web Development, Endorsement for Language Arts instruction (state of WA)</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Certifications:</strong> <span>Fullstack Web Development(UW)</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Pyschology</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>32</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Pyschology</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Sowa332@gmail.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available; I would love to build a website for you!</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Social media:</strong> <span>Located at bottom of page</span></li>
                   </ul>
                 </div>
               </div>
