--- a/index.html
+++ b/index.html
@@ -406,7 +406,15 @@
               <a href="https://shelf-space.herokuapp.com/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="../Gabe-Sowa-Port/assets/img/liftr.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>liftr</h4>
+              <p>A fullstack React application designed to streamline the workout-scheduling process for both trainers and athletes</p>
+              <a href="https://liftr-app.netlify.app/signup" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
@@ -438,15 +446,6 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
@@ -488,7 +487,7 @@
         <div class="section-title">
           <span>Contact Me</span>
           <h2>Contact Me</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>Feel free to contact me via any of the following platforms. I like to stay connected and will usually respond within the day.</p>
         </div>
 
         <div class="row">
@@ -513,14 +512,14 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>contact@example.com</p>
+                  <p>Sowa332@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>(971) 895 - 0019</p>
                 </div>
               </div>
             </div>
@@ -555,15 +554,13 @@
         </div>
 
       </div>
-    </section><!-- End Contact Me Section -->
+    </section>
 
-  </main><!-- End #main -->
+  </main>
 
-  <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
       <h3>Gabriel Sowa</h3>
-      <p>Please contact me if you'd like any more information. I am happy to talk.</p>
       <div class="social-links">
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -574,11 +571,10 @@
       </div>
       
     </div>
-  </footer><!-- End Footer -->
+  </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -587,7 +583,6 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
