--- a/index.html
+++ b/index.html
@@ -392,9 +392,7 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
-
-    <!-- ======= My Portfolio Section ======= -->
+    </section>
     <section id="portfolio" class="portfolio">
       <div class="container">
 
