--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
                 </div>
               </div>
               <div class="progress">
+                <span class="skill">NoSQL Databases (MongoDB) <i class="val">50%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="progress">
                 <span class="skill">React <i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -313,9 +319,7 @@
         </div>
 
       </div>
-    </section><!-- End My Services Section -->
-
-    <!-- ======= Testimonials Section ======= -->
+    </section>
     <section id="testimonials" class="testimonials">
       <div class="container position-relative">
 
@@ -474,22 +478,20 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="../Gabe-Sowa-Port/assets/img/jate.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>J.A.T.E.</h4>
+              <p>"Just Another Text Editor" is a PWA (Progressive Web App) that functions both on and offline</p>
+              <a href="https://gabe-pwa-note-taker.herokuapp.com/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="../Gabe-Sowa-Port/assets/img/breakoutblock.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Classic Breakout Block</h4>
+              <p>Practice with developing a game using vanilla Javascript; a spin on the classic breakout block formula</p>
+              <a href="https://thegabe101.github.io/gms-breakout-block/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -516,11 +518,11 @@
                   <i class="bx bx-share-alt"></i>
                   <h3>Social Profiles</h3>
                   <div class="social-links">
-                    <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                     <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+                    <a href="#" class="github"><i class="bi bi-github"></i></a>
                     <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="#" class="wechat"><i class="bi bi-wechat"></i></a>
+                    <a href="#" class="line"><i class="bi bi-line"></i></a>
                   </div>
                 </div>
               </div>
