--- a/index.html
+++ b/index.html
@@ -1,38 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Gabriel Sowa</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
-
-  <!-- <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-
-
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
-
-
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://kit.fontawesome.com/33d90779a0.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-
-  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
-
     <nav id="navbar" class="navbar">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
@@ -52,31 +37,22 @@
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav><!-- .navbar -->
-
-  </header><!-- End Header -->
-
-  <!-- ======= Hero Section ======= -->
+    </nav>
+  </header>
   <section id="hero">
     <div class="hero-container">
       <h1>Gabriel Sowa</h1>
       <h2>I'm a professional web developer in Seattle</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
-  </section><!-- End Hero -->
-
+  </section>
   <main id="main">
-
-    <!-- ======= About Me Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
         <div class="section-title">
-          
           <h2>About Me</h2>
           <p>I am an aspiring web developer and recent University of Washington Fullstack Bootcamp graduate.</p>
         </div>
-
         <div class="row">
           <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>          <div class="col-lg-8 d-flex flex-column align-items-stretch">
             <div class="content ps-lg-4 d-flex flex-column justify-content-center">
@@ -518,9 +494,9 @@
                   <i class="bx bx-share-alt"></i>
                   <h3>Social Profiles</h3>
                   <div class="social-links">
-                    <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.facebook.com/thegabe101" class="facebook"><i class="bi bi-facebook"></i></a>
                     <a href="#" class="github"><i class="bi bi-github"></i></a>
-                    <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/gabriel-sowa-72220b12/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                     <a href="#" class="wechat"><i class="bi bi-wechat"></i></a>
                     <a href="#" class="line"><i class="bi bi-line"></i></a>
                   </div>
@@ -580,8 +556,8 @@
     <div class="container">
       <h3>Gabriel Sowa</h3>
       <div class="social-links">
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/thegabe101" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/gabriel-sowa-72220b12/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="#" class="github"><i class="bx bxl-github"></i></a>
       </div>
       <div class="copyright">
