--- a/inner-page.html
+++ b/inner-page.html
@@ -9,8 +9,8 @@
 		<meta content="" name="keywords" />
 
 		<!-- Favicons -->
-		<link href="assets/img/favicon.png" rel="icon" />
-		<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+		<!-- <link href="assets/img/favicon.png" rel="icon" />
+		<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
 
 		<!-- Google Fonts -->
 		<link
@@ -39,18 +39,8 @@
 			href="assets/vendor/swiper/swiper-bundle.min.css"
 			rel="stylesheet"
 		/>
-
-		<!-- Template Main CSS File -->
 		<link href="assets/css/style.css" rel="stylesheet" />
-
-		<!-- =======================================================
-  * Template Name: Laura - v4.8.1
-  * Template URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 	</head>
-
 	<body>
 		<!-- ======= Header ======= -->
 		<header
@@ -139,11 +129,8 @@
 		<!-- ======= Footer ======= -->
 		<footer id="footer">
 			<div class="container">
-				<h3>Laura Thomson</h3>
-				<p>
-					Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis
-					magni eligendi fuga maxime saepe commodi placeat.
-				</p>
+				<h3>Gabriel Sowa</h3>
+				<p></p>
 				<div class="social-links">
 					<a href="#" class="twitter"
 						><i class="bx bxl-twitter"></i
