--- a/index.html
+++ b/index.html
@@ -319,7 +319,6 @@
                 </p>
               </div>
             </div><!-- End testimonial item -->
-
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="../Gabe-Sowa-Port/assets/img/leepic.jpg" class="testimonial-img" alt="">
@@ -327,7 +326,7 @@
                 <h4>SEO</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Gabe was a huge asset in various content and web dev initiatives. He directly wrote, edited, translated to HTML, and published numerous high-quality articles and landing pages. I can't say enough good things about his work.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
