--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <h4>Professor, Western Washington University</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Gabe is a deep thinker and a highly capable problem-solver. His work studying social media in Vietnam was highly revealing and an indicator of the level of depth he is able to achieve on a project-level.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
