--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>32</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Sowa332@gmail.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sowadev81@gmail.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available; I would love to build a website for you!</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Social media:</strong> <span>Located at bottom of page</span></li>
                   </ul>
@@ -194,7 +194,7 @@
               <ul>
                 <li>Seattle, Washington</li>
                 <li>(971) 895-0019</li>
-                <li>Sowa332@gmail.com</li>
+                <li>sowadev81@gmail.com</li>
               </ul>
               </p>
             </div>
@@ -347,7 +347,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="../Gabe-Sowa-Port/assets/img/estelle.jpg" class="testimonial-img" alt="">
+                <img src="./assets/img/estelle.jpg" class="testimonial-img" alt="">
                 <h3>JungYeun Park</h3>
                 <h4>Educator and Investor</h4>
                 <p>
@@ -407,6 +407,15 @@
         </ul>
 
         <div class="row portfolio-container">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img class="soupseeker1" src="./assets/img/soupseeker.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Soup Seeker</h4>
+              <p class="soupseeker1p">A wordle spinoff for lovers of soup; aquire ten ladles before failing the Wordle to become the Soup Lord!</p>
+              <a href="https://soup-seeker.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="../Gabe-Sowa-Port/assets/img/Dog.jpg" class="img-fluid" alt=""></div>
@@ -523,7 +532,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>Sowa332@gmail.com</p>
+                  <p>sowadev81@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -593,7 +602,6 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
   <script src="assets/js/main.js"></script>
 
 </body>
